--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,27 @@ plugins {
 
 android {
     namespace 'com.example.myapplication'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
+        //targetSdkVersion 34
+    }
+
+    android {
+        testOptions {
+            unitTests {
+                includeAndroidResources = true
+                execution 'ANDROIDX_TEST_ORCHESTRATOR'
+            }
+        }
     }
 
 
@@ -37,22 +48,50 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:32.1.1')
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:22.3.1'
     implementation 'com.github.TutorialsAndroid:GButton:v1.0.19'
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation 'com.google.android.gms:play-services-auth:21.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-    implementation 'com.google.firebase:firebase-database:20.2.2'
-    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.1'
+    implementation 'com.google.firebase:firebase-database:20.3.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.3.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.11.1'
+    implementation 'com.google.firebase:firebase-firestore:24.11.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'com.github.clans:fab:1.6.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:core:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
+    androidTestImplementation 'com.google.firebase:firebase-auth:22.3.1'
+
+    testImplementation 'org.easymock:easymock:4.3'
+    androidTestImplementation 'org.easymock:easymock:4.3'
+
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'org.mockito:mockito-android:4.0.0'
+
+    androidTestUtil 'androidx.test:orchestrator:1.4.2'
+
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.3.0'
+
+
+
+    //ndroidTestImplementation 'org.hamcrest:hamcrest:2.2'
+
 }
+
+// Adaugă această linie la sfârșitul fișierului
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
